Text ellipsis on project title names. Added this effect using some css. Using 'text-overflow: elipsis' to add '...' following an overflowing project name, and setting a flex-basis to make sure there are bounds to long of a project-nav-title can be.

--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -1,7 +1,14 @@
 .project-nav-item {
-	width: 100%;
+	width: 80%;
 	height: 20px;
 	display: flex;
+}
+
+.project-nav-title {
+	flex-basis: 78px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .icon-container {
